--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,21 @@
 name: hive_generator
 description: Extension for Hive. Automatically generates TypeAdapters to store any class.
-version: 2.0.1
+version: 3.0.0
 homepage: https://github.com/hivedb/hive/tree/master/hive_generator
 documentation: https://docs.hivedb.dev/
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
-  build: ^2.0.0
-  source_gen: ^1.0.0
-  hive: ^2.0.4
-  analyzer: ">=4.6.0 <7.0.0"
-  source_helper: ^1.1.0
+  build: ^3.0.2
+  source_gen: ^3.1.0
+  hive: ^2.2.3
+  analyzer: ">=8.0.0 <9.0.0"
+  source_helper: ^1.3.7
 
 dev_dependencies:
-  test: ^1.17.11
+  test: ^1.26.3
   build_test: any
   build_runner: any
-  pedantic: ^1.11.1
+  lints: ^6.0.0
